--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_66","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"D:\\My files\\ITTalents\\IT-Talents-TeamWork-Emag\\E-mag_Team_Project\\Emag","type":"PROJECT","hints":{"PROJECT_NAME":"Emag"}},"ABSENT"]]
+[[{"location":"D:\\My files\\ITTalents\\IT-Talents-TeamWork-Emag\\E-mag_Team_Project\\Emag","type":"PROJECT","hints":{"PROJECT_NAME":"Emag"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_66","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
